// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Admin Error Component > renders Admin error page correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiBox-root css-d8r78j"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wffj3i-MuiSvgIcon-root"
        data-testid="BugReportIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20zm-6 8h-4v-2h4zm0-4h-4v-2h4z"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1fjbu-MuiTypography-root"
      >
        404
      </p>
    </div>
    <div
      class="MuiBox-root css-sg7ujc"
    >
      <h2
        class="MuiTypography-root MuiTypography-h2 css-18ft2kn-MuiTypography-root"
      >
        Page not found
      </h2>
      <p
        class="MuiTypography-root MuiTypography-body1 css-n3u125-MuiTypography-root"
      >
        We're sorry, the page you requested was not found on the server. If you entered the URL manually please check your spelling and try again. Otherwise, return to the 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-17fxp5y-MuiTypography-root-MuiLink-root"
          href="/admin-ims"
        >
          admin home page
        </a>
         .
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Admin Layout > renders admin layout page correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-v2kfba"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-1r501zp-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Admin Home"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="navigate to admin home"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="HomeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </span>
        <nav
          aria-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1mc59t7-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
          />
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Admin Layout > renders units breadcrumbs correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-v2kfba"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-1r501zp-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Admin Home"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="navigate to admin home"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="HomeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </span>
        <nav
          aria-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1mc59t7-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <div
                class="MuiBox-root css-8zy5qf"
              />
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <p
                aria-label="Units"
                class="MuiTypography-root MuiTypography-body1 css-1qs6ojv-MuiTypography-root"
                data-mui-internal-clone-element="true"
                role="tooltip"
              >
                Units
              </p>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Admin Layout > renders usage statuses breadcrumbs correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-v2kfba"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-1r501zp-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Admin Home"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="navigate to admin home"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="HomeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </span>
        <nav
          aria-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1mc59t7-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <div
                class="MuiBox-root css-8zy5qf"
              />
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <p
                aria-label="Usage statuses"
                class="MuiTypography-root MuiTypography-body1 css-1qs6ojv-MuiTypography-root"
                data-mui-internal-clone-element="true"
                role="tooltip"
              >
                Usage statuses
              </p>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
